--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
         "kartik-v/yii2-widgets": "*",
-        "mercadopago/sdk": "*"
+        "mercadopago/sdk": "*",
+        "franciscomaya/yii2-sceditor": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
