- Manual email for wheels - Report and printable version - Update tutorial

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "yiisoft/yii2-swiftmailer": "*",
         "kartik-v/yii2-widgets": "*",
         "mercadopago/sdk": "*",
-        "franciscomaya/yii2-sceditor": "dev-master"
+        "franciscomaya/yii2-sceditor": "dev-master",
+        "kartik-v/yii2-mpdf": "*"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
