--- a/composer.json
+++ b/composer.json
@@ -20,10 +20,10 @@
         "yiisoft/yii2-swiftmailer": "*",
         "kartik-v/yii2-widgets": "*",
         "franciscomaya/yii2-sceditor": "dev-master",
-        "kartik-v/yii2-mpdf": "*"
+        "kartik-v/yii2-checkbox-x": "^1.0"
     },
     "require-dev": {
-        "yiisoft/yii2-codeception": "*",
+        "codeception/codeception": "*",
         "yiisoft/yii2-debug": "*",
         "yiisoft/yii2-gii": "*",
         "yiisoft/yii2-faker": "*"
