--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "yiisoft/yii2-swiftmailer": "*",
         "kartik-v/yii2-widgets": "*",
         "franciscomaya/yii2-sceditor": "dev-master",
-        "kartik-v/yii2-checkbox-x": "^1.0"
+        "kartik-v/yii2-checkbox-x": "^1.0",
+        "yiisoft/yii2-httpclient": "^2.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "*",
