--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "kartik-v/yii2-widgets": "*",
         "franciscomaya/yii2-sceditor": "dev-master",
         "kartik-v/yii2-checkbox-x": "^1.0",
-        "yiisoft/yii2-httpclient": "^2.0"
+        "yiisoft/yii2-httpclient": "^2.0",
+        "jpgraph/jpgraph": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "*",
