--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "irc": "irc://irc.freenode.net/yii",
         "source": "https://github.com/yiisoft/yii2"
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "require": {
         "php": ">=5.4.0",
         "yiisoft/yii2": "*",
@@ -21,8 +22,7 @@
         "kartik-v/yii2-widgets": "*",
         "franciscomaya/yii2-sceditor": "dev-master",
         "kartik-v/yii2-checkbox-x": "^1.0",
-        "yiisoft/yii2-httpclient": "^2.0",
-        "jpgraph/jpgraph": "*"
+        "yiisoft/yii2-httpclient": "^2.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "*",
