--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "franciscomaya/yii2-sceditor": "dev-master",
         "kartik-v/yii2-checkbox-x": "^1.0",
         "yiisoft/yii2-httpclient": "^2.0",
-        "phpoffice/phppresentation": "dev-master"
+        "phpoffice/phppresentation": "dev-master",
+        "phpoffice/phpword": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "*",
