--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,7 @@
     "require-dev": {
         "yiisoft/yii2-debug": "*",
         "yiisoft/yii2-gii": "*",
-        "yiisoft/yii2-faker": "*"
+        "captbaritone/mailcatcher-codeception-module": "*"
     },
     "config": {
         "process-timeout": 1800,
