--- a/config/console.php.sample
+++ b/config/console.php.sample
@@ -30,6 +30,21 @@ return [
                 ],
             ],
         ],
+        'mailer' => [
+            'class' => 'yii\swiftmailer\Mailer',
+            // send all mails to a file by default. You have to set
+            // 'useFileTransport' to false and configure a transport
+            // for the mailer to send real emails.
+            'useFileTransport' => true,
+            'transport' => [
+                'class' => 'Swift_SmtpTransport',
+                'host' => 'localhost',
+                'username' => '******',
+                'password' => '******',
+                'port' => '587',
+                'encryption' => 'tls',
+            ],
+        ],
         'db' => $db,
     ],
     'params' => $params,
