Composer improve and update

--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,9 @@
                 "npm-asset-library": "vendor/npm",
                 "bower-asset-library": "vendor/bower"
             }
+        },
+        "preferred-install": {
+            "*": "dist"
         }
     },
     "scripts": {
