--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "yiisoft/yii2-bootstrap": "*",
         "yiisoft/yii2-swiftmailer": "*",
         "kartik-v/yii2-widgets": "*",
-        "franciscomaya/yii2-sceditor": "dev-master",
+        "2amigos/yii2-ckeditor-widget": "*",
         "kartik-v/yii2-checkbox-x": "^1.0",
         "yiisoft/yii2-httpclient": "^2.0",
         "phpoffice/phppresentation": "dev-master",
