--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "phpoffice/phpword": "dev-master",
         "onmotion/yii2-telegram": "*",
         "kartik-v/yii2-export": "*",
-        "swiftmailer/swiftmailer": "^5"
+        "swiftmailer/swiftmailer": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "*",
