--- a/composer.json
+++ b/composer.json
@@ -18,15 +18,16 @@
         "php": ">=5.4.0",
         "yiisoft/yii2": "*",
         "yiisoft/yii2-bootstrap": "*",
+        "yiisoft/yii2-swiftmailer": "*",
+        "yiisoft/yii2-httpclient": "*",
         "kartik-v/yii2-widgets": "*",
         "kartik-v/yii2-checkbox-x": "*",
+        "kartik-v/yii2-export": "*",
         "2amigos/yii2-ckeditor-widget": "*",
-        "yiisoft/yii2-httpclient": "*",
         "phpoffice/phppresentation": "dev-master",
         "phpoffice/phpword": "dev-master",
         "onmotion/yii2-telegram": "*",
-        "kartik-v/yii2-export": "*",
-        "phpmailer/phpmailer": "*"
+        "swiftmailer/swiftmailer": "*"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "*",
