--- a/config/web.php.sample
+++ b/config/web.php.sample
@@ -2,6 +2,13 @@
 
 $params = require(__DIR__ . '/params.php');
 
+\Yii::$container->set('yii\widgets\LinkPager', [
+    'firstPageLabel' => "<span class='glyphicon glyphicon-fast-backward'></span>",
+    'prevPageLabel' => "<span class='glyphicon glyphicon-chevron-left'></span>",
+    'nextPageLabel' => "<span class='glyphicon glyphicon-chevron-right'></span>",
+    'lastPageLabel' => "<span class='glyphicon glyphicon-fast-forward'></span>",
+]);
+
 $config = [
     'id' => 'basic',
     'basePath' => dirname(__DIR__),
