--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "kartik-v/yii2-widgets": "*",
         "kartik-v/yii2-checkbox-x": "*",
         "kartik-v/yii2-export": "*",
+        "kartik-v/yii2-password": "*",
         "2amigos/yii2-ckeditor-widget": "*",
         "phpoffice/phppresentation": "dev-master",
         "phpoffice/phpword": "dev-master",
