[WIP] Area team type

--- a/codeception.yml
+++ b/codeception.yml
@@ -14,9 +14,6 @@ modules:
     config:
         Yii2:
             configFile: 'config/test.php'
-            part: orm
-            entryScript: index-test.php
-            cleanup: false
         Db:
             dsn: 'mysql:host=vach-data;port=3306;dbname=vach_test'
             user: 'root'
@@ -24,6 +21,7 @@ modules:
             dump: tests/_data/dump.sql
             populate: true
             cleanup: true
+            populator: 'MYSQL_PWD=$password mysql -u$user -h$host $dbname < $dump'
 # To enable code coverage:
 #coverage:
 #    #c3_url: http://localhost:8080/index-test.php/
