--- a/config/console.php.sample
+++ b/config/console.php.sample
@@ -10,6 +10,7 @@ return [
     'basePath' => dirname(__DIR__),
     'bootstrap' => ['log', 'gii'],
     'controllerNamespace' => 'app\commands',
+    'language' => 'es',
     'modules' => [
         'gii' => 'yii\gii\Module',
     ],
