--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -1,31 +1,20 @@
-# Codeception Test Suite Configuration
-
-# suite for acceptance tests.
-# perform tests in browser using the Selenium-like tools.
-# powered by Mink (http://mink.behat.org).
-# (tip: that's what your customer will see).
-# (tip: test your ajax and javascript by one of Mink drivers).
-
-# RUN `build` COMMAND AFTER ADDING/REMOVING MODULES.
-
 class_name: AcceptanceTester
 modules:
     enabled:
         - WebDriver
         - Db
-        - MailCatcher
         - Yii2
-# you can use WebDriver instead of PhpBrowser to test javascript and ajax.
-# This will require you to install selenium. See http://codeception.com/docs/04-AcceptanceTests#Selenium
-# "restart" option is used by the WebDriver to start each time per test-file new session and cookies,
-# it is useful if you want to login in your app in each test.
-#        - WebDriver
+        #- Codeception\Extension\Recorder
     config:
         WebDriver:
-            url: 'http://localhost/vach/web/'
+            url: 'http://vach-web/web/'
             browser: chrome
+            host: 'vach-selenium'
             window_size: 1360x768
             restart: false
-        MailCatcher:
-            url: 'http://localhost'
-            port: '1080'
+        Yii2:
+          configFile: 'config/test.php'
+          part: ORM
+          transaction: true
+          cleanup: false
+          entryScript: index-test.php
