Report auto fill

--- a/config/params.php.sample
+++ b/config/params.php.sample
@@ -24,6 +24,7 @@ return [
     'default_quantity' => 10,
     'part1_name' => 'Part 1',
     'part2_name' => 'Part 2',
+    'report_autofill_users' => [],
     //
     'payu_test' => true,
     'payu_merchant_id' => 508029,
