--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,10 @@
         "phpoffice/phpword": "dev-master",
         "onmotion/yii2-telegram": "*",
         "swiftmailer/swiftmailer": "*",
-        "rmrevin/yii2-fontawesome": "*"
+        "rmrevin/yii2-fontawesome": "*",
+        "backup-manager/backup-manager": "^1.3",
+        "league/flysystem-sftp": "^1.0",
+        "yiisoft/yii2-faker": "^2.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "*",
