--- a/docker/Dockerfile-web
+++ b/docker/Dockerfile-web
@@ -12,7 +12,7 @@ RUN apt-get update && apt-get -y install \
 RUN rm -rf /var/lib/apt/lists/*
 
 #COPY auth.json /root/.composer/auth.json
-#RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 #RUN /usr/local/bin/composer global require "fxp/composer-asset-plugin:*"
 
 ENV APACHE_RUN_USER www-data
