--- a/docker/Dockerfile-web
+++ b/docker/Dockerfile-web
@@ -1,4 +1,4 @@
-FROM ubuntu:xenial
+FROM ubuntu:bionic
 
 MAINTAINER Marcelo Briones <ing@marcelobriones.com.ar>
 
@@ -21,7 +21,7 @@ ENV APACHE_LOG_DIR /var/log/apache2
 
 RUN /usr/sbin/a2enmod rewrite
 
-RUN sed -i "s/upload_max_filesize = 2M/upload_max_filesize = 20M/g" /etc/php/7.0/apache2/php.ini
+RUN sed -i "s/upload_max_filesize = 2M/upload_max_filesize = 20M/g" /etc/php/7.2/apache2/php.ini
 
 ENV PATH="/var/www/html/vendor/bin:${PATH}"
 
