--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -16,7 +16,7 @@ services:
 
     vach-data:
         container_name: vach-data
-        image: mysql:5.7
+        image: mysql:5.6
         tmpfs: /var/lib/mysql
         environment:
             MYSQL_ROOT_PASSWORD: 'secret'
@@ -50,6 +50,7 @@ services:
             - vach-net
 
     vach-mailcatcher:
+        container_name: vach-mailcatcher
         image: schickling/mailcatcher
         ports:
             - "10188:1080"
