Change mailcatcher image

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -51,7 +51,7 @@ services:
 
     vach-mailcatcher:
         container_name: vach-mailcatcher
-        image: schickling/mailcatcher
+        image: beardyjay/mailcatcher
         ports:
             - "10188:1080"
         networks:
