--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -1,19 +1,24 @@
 class_name: AcceptanceTester
 modules:
     enabled:
+        - Asserts
         - WebDriver
         - Db
         - Yii2
+        - MailCatcher
     config:
         WebDriver:
             url: 'http://vach-web/web/'
             browser: chrome
             host: 'vach-selenium'
             window_size: 1360x768
-            restart: false
+            restart: true
         Yii2:
-          configFile: 'config/test.php'
-          part: orm, email
-          transaction: true
-          cleanup: false
-          entryScript: index-test.php
+            configFile: 'config/test.php'
+            part: orm, email
+            transaction: true
+            cleanup: false
+            entryScript: index-test.php
+        MailCatcher:
+            url: 'http://vach-mailcatcher'
+            port: '1080'
