--- a/tests/functional.suite.yml
+++ b/tests/functional.suite.yml
@@ -9,5 +9,6 @@
 class_name: FunctionalTester
 modules:
     enabled:
-      - Filesystem
-      - Yii2
+        - Asserts
+        - Filesystem
+        - Yii2
