--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -51,9 +51,9 @@ services:
 
     vach-mailcatcher:
         container_name: vach-mailcatcher
-        image: beardyjay/mailcatcher
+        image: tophfr/mailcatcher
         ports:
-            - "10188:1080"
+            - "10188:80"
         networks:
             - vach-net
 
