--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3.6'
 services:
     vach:
         container_name: vach-web
+        image: vach-web
         build:
             context: .
             dockerfile: Dockerfile-web
