--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
-# phpstorm project files
-.idea
-
-# netbeans project files
-nbproject
+# ide preferences
+.idea/
+nbproject/
+.vscode/
 
 # zend studio for eclipse project files
 .buildpath
