--- a/config/console.php.sample
+++ b/config/console.php.sample
@@ -32,18 +32,15 @@ return [
             ],
         ],
         'mailer' => [
-            'class' => 'yii\swiftmailer\Mailer',
-            // send all mails to a file by default. You have to set
-            // 'useFileTransport' to false and configure a transport
-            // for the mailer to send real emails.
-            'useFileTransport' => true,
+            'class' => 'yii\symfonymailer\Mailer',
             'transport' => [
-                'class' => 'Swift_SmtpTransport',
-                'host' => 'localhost',
-                'username' => '******',
-                'password' => '******',
-                'port' => '587',
-                'encryption' => 'tls',
+                'scheme' => 'smtp', // "smtps": using TLS, "smtp": without using TLS.
+                'host' => 'vach-mailcatcher',
+                'port' => 25,
+                'username' => '',
+                'password' => '',
+                'options' => [
+                ],
             ],
         ],
         'db' => $db,
