--- a/config/test.php.sample
+++ b/config/test.php.sample
@@ -47,17 +47,17 @@ $web = [
         'errorHandler' => [
             'errorAction' => 'site/error',
         ],
-        'mail' => [
-            'class' => 'yii\swiftmailer\Mailer',
-//            'transport' => [
-//                'class' => 'Swift_SmtpTransport',
-//                'host' => 'smtp.gmail.com', // e.g. smtp.mandrillapp.com or smtp.gmail.com
-//                'username' => '************',
-//                'password' => '************',
-//                'port' => '587', // Port 25 is a very common port too
-//                'encryption' => 'tls', // It is often used, check your provider or mail server specs
-//            ],
-            'useFileTransport' => true,
+        'mailer' => [
+            'class' => 'yii\symfonymailer\Mailer',
+            'transport' => [
+                'scheme' => 'smtp', // "smtps": using TLS, "smtp": without using TLS.
+                'host' => 'vach-mailcatcher',
+                'port' => 25,
+                'username' => '',
+                'password' => '',
+                'options' => [
+                ],
+            ],
         ],
         'log' => [
             'traceLevel' => YII_DEBUG ? 3 : 0,
